# supernote-apple-note-unifier

./: .env.example  .gitignore  README.md  pyproject.toml  test-notes.applescript
research/: note_format_analysis.md  textbox_format.md  textbox_template_1.txt  textbox_template_2.txt  textbox_template_3.txt
scripts/: build_swift.sh  com.supernote-unifier.sync.example.plist  install_deps.sh  install_launchd.sh  uninstall_launchd.sh
src/unifier/: __init__.py  cli.py  config.py  orchestrator.py  pdf_utils.py  state.py
src/unifier/converters/: __init__.py  markdown_to_html.py
src/unifier/generators/: __init__.py  base.py  markdown.py  pdf_layer.py  strokes.py
src/unifier/supernote/: __init__.py  note_format.py  paths.py  sync.py
src/unifier/sync/: __init__.py  engine.py  reverse.py  supernote_watcher.py
swift-bridge/: Package.swift
swift-bridge/Sources/AppleNotesBridge/: BridgingHeader.h  main.swift
tests/: TESTING_CRITERIA.md  generate_visual_samples.py  test_conversions.py
tests/fixtures/html_to_markdown/: 01_basic_formatting.html  02_headers_hierarchy.html  03_nested_lists_complex.html  04_links_and_urls.html  05_code_blocks.html  06_blockquotes.html  07_special_characters.html  08_consecutive_headings.html  09_complex_mixed_content.html  10_apple_notes_quirks.html  11_inline_links_complex.html  12_mixed_list_content.html  13_deeply_nested.html  14_whitespace_variations.html  15_entity_heavy.html  16_formatting_edge_cases.html  17_code_variations.html  18_header_edge_cases.html  19_paragraph_patterns.html  20_apple_notes_real.html
(+20 files in other folders)
